# expresso

./: .gitignore  CMakeLists.txt  Expresso.pro  README.md  mainwindow.ui  python.py  resources.qrc
Expresso/: CMakeLists.txt
build-Expresso-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Expresso  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Expresso-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-Expresso-Desktop-Debug/Expresso_autogen/: deps
build-Expresso-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Expresso-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Expresso-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Expresso_autogen/: deps
specification/: Opis slučaja upotrebe izborRasporeda.md  dijagram_klasa.vpd
specification/opisi_slučajeva_upotrebe/: Izdavanje računa.md  (+4 more)
src/: artikl.cpp  artikl.h  binaryserializer.cpp  binaryserializer.h  designeArrangement.ui  glavnimeni.cpp  glavnimeni.h  glavnimeni.ui  help.cpp  help.h  help.ui  izvestaj.cpp  izvestaj.h  kategorija.cpp  kategorija.h  krenisaradom.cpp  krenisaradom.h  krenisaradom.ui  main.cpp  mainwindow.cpp  mainwindow.h  meni.cpp  meni.h  naruci.cpp  naruci.h  naruci.ui  nizartikala.cpp  nizartikala.h  porudzbina.cpp  porudzbina.h  raspored.cpp  raspored.h  rasporeddata.cpp  rasporeddata.h  serializable.h  serializer.h  sto.cpp  sto.h  stolovi.cpp  stolovi.h  (+14 more)
tests/: artikl_test.cpp  catch.hpp  main.cpp  naruci_test.cpp  porudzbina_test.cpp  raspored_test.cpp  rasporeddata_test.cpp  sto_glmeni_test.cpp  sto_test.cpp  tests.pro  tmain.cpp  unesiartikle_test.cpp  unesiartikle_test.h
(+20 files in other folders)
